Configure default JVM args to enable native access